Quem Somos: equipe - correção solicitada dos membros

--- a/pages/quem_somos.html
+++ b/pages/quem_somos.html
@@ -152,7 +152,7 @@
 
                 <div class="card-equipe">
                     <p>Equipe de Apoio</p>
-                    <p>Joseane Nunes</p>
+                    <p>Daiane Rodrigues Corrêa</p>
                 </div>
 
                 <div class="card-equipe">
@@ -164,17 +164,6 @@
                     <p>Equipe de Apoio</p>
                     <p>Marilda Aparecida Rodrigues</p>
                 </div>
-
-                <div class="card-equipe">
-                    <p>Equipe de Apoio</p>
-                    <p>Marilda Aparecida Rodrigues</p>
-                </div>
-
-                <div class="card-equipe">
-                    <p>Equipe de Apoio</p>
-                    <p>Maria Elena Ribeiro</p>
-                </div>
-
             </div>
 
             <h3>Diretores</h3>
