Quem Somos: missão e trabalho - correção de texto

--- a/pages/quem_somos.html
+++ b/pages/quem_somos.html
@@ -109,7 +109,7 @@
                 <p>
                     O trabalho é realizado em quatro grupos: dois grupos, para atender a faixa etária de 06 a 8 anos e
                     dois grupos, para atender a faixa etária de 9 a 12 anos, através de Oficinas de Artes Manuais,
-                    Grupos Temáticos, Atividades Recreativas Direcionadas, Informática e Atividades de Esporte e Lazer
+                    Grupos Temáticos, Atividades Recreativas Direcionadas, Informática e Atividades de Esporte e Lazer.
                 </p>
             </div>
         </div>
