resposividade quem somos e como ajudar

--- a/pages/como_ajudar.html
+++ b/pages/como_ajudar.html
@@ -66,7 +66,7 @@
                 Sua doação poderá ser deduzida no imposto de renda.
             </p>
 
-            <div>
+            <div class="botoes">
                 <a href="#doacoes">
                     <button class="botao-contribuinte">
                     Seja um sócio contribuinte!
@@ -81,7 +81,7 @@
             </div>
         </div>
         <div class="imagem">
-            <a href="https://storyset.com/people">
+            <a href="/pages/como_ajudar.html">
                 <img src="../assets/doacoes-apoio.svg" alt="Crianças Brincando">
             </a>
         </div>
