Corrigindo as linkagens entre páginas

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <h3>Links rápidos</h3>
             <ul>
                 <li>
-                    <a href="/" class="active">Home</a>
+                    <a href="" class="active">Home</a>
                 </li>
                 <li>
                     <a href="./pages/quem_somos.html">Quem Somos</a>
