--- a/pages/transparencia.html
+++ b/pages/transparencia.html
@@ -70,7 +70,7 @@
                 para fornecer informações detalhadas sobre como os recursos são aplicados.
             </p>
     
-            <a href="https://1drv.ms/b/s!AopVgcjJxN2zh0lS7UNqenfmsN3k?e=PyMZcC">
+            <a href="https://1drv.ms/b/s!AopVgcjJxN2zh0lS7UNqenfmsN3k?e=PyMZcC" target="_blank">
                 <button class="transparencia-botao">
                     Acessar transparência
                 </button>
@@ -88,16 +88,16 @@
             <h3>Links rápidos</h3>
             <ul>
                 <li>
-                    <a href="/" class="active">Home</a>
+                    <a href="../index.html" class="active">Home</a>
                 </li>
                 <li>
-                    <a href="./pages/quem_somos.html">Quem Somos</a>
+                    <a href="./quem_somos.html">Quem Somos</a>
                 </li>
                 <li>
-                    <a href="./pages/como_ajudar.html">Como Ajudar</a>
+                    <a href="./como_ajudar.html">Como Ajudar</a>
                 </li>
                 <li>
-                    <a href="./pages/transparencia.html">Transparência</a>
+                    <a href="./transparencia.html">Transparência</a>
                 </li>
             </ul>
         </nav>
