--- a/pages/como_ajudar.html
+++ b/pages/como_ajudar.html
@@ -201,16 +201,16 @@
             <h3>Links rápidos</h3>
             <ul>
                 <li>
-                    <a href="/" class="active">Home</a>
+                    <a href="../index.html" class="active">Home</a>
                 </li>
                 <li>
-                    <a href="./pages/quem_somos.html">Quem Somos</a>
+                    <a href="./quem_somos.html">Quem Somos</a>
                 </li>
                 <li>
-                    <a href="./pages/como_ajudar.html">Como Ajudar</a>
+                    <a href="">Como Ajudar</a>
                 </li>
                 <li>
-                    <a href="./pages/transparencia.html">Transparência</a>
+                    <a href="./transparencia.html">Transparência</a>
                 </li>
             </ul>
         </nav>
