--- a/pages/quem_somos.html
+++ b/pages/quem_somos.html
@@ -76,7 +76,7 @@
                 diretrizes estabelecidos no <strong>Estatuto da Criança e do Adolescente</strong> e
                 na <strong>Lei Orgânica da Assistência Social (LOAS).</strong>
             </p>    
-            <a href="./pages/como_ajudar.html" class="botao-primario botao_quem_somos">
+            <a href="./como_ajudar.html" class="botao-primario botao_quem_somos">
                 <button>
                     Quero ajudar!
                 </button>
@@ -321,16 +321,16 @@
             <h3>Links rápidos</h3>
             <ul>
                 <li>
-                    <a href="/" class="active">Home</a>
+                    <a href="../index.html" class="active">Home</a>
                 </li>
                 <li>
-                    <a href="./pages/quem_somos.html">Quem Somos</a>
+                    <a href="">Quem Somos</a>
                 </li>
                 <li>
-                    <a href="./pages/como_ajudar.html">Como Ajudar</a>
+                    <a href="./como_ajudar.html">Como Ajudar</a>
                 </li>
                 <li>
-                    <a href="./pages/transparencia.html">Transparência</a>
+                    <a href="./transparencia.html">Transparência</a>
                 </li>
             </ul>
         </nav>
