Atualizações 02/2024 - Dados e Transparencia

--- a/pages/quem_somos.html
+++ b/pages/quem_somos.html
@@ -93,14 +93,18 @@
             <div>
                 <h2>Missão</h2>
                 <p>
-                    Promover o desenvolvimento das potencialidades das crianças e adolescentes, bem como o
-                    fortalecimento de vínculos familiares e comunitários.
+                    Promover o desenvolvimento das potencialidades das crianças e adolescentes, 
+                    bem como o fortalecimento de vínculos familiares e comunitários, além de preparar crianças e 
+                    adolescentes para o exercício de sua cidadania por meio da participação social, 
+                    assegurando dessa forma o desenvolvimento do seu protagonismo e da sua autonomia.
                 </p>
             </div>
 
-            <img src="../assets/missao.svg"
+            <img 
+                src="../assets/missao.svg"
                 alt="Foto crianças com banner do Núcleo de Atendimento Social 'Angela Martin Bassettto'">
         </div>
+
         <div>
             <img src="../assets/trabalho.svg" alt="Foto crianças brincando de cabo de guerra">
 
@@ -113,6 +117,27 @@
                 </p>
             </div>
         </div>
+
+        <div>
+            <div>
+                <h2>Visão</h2>
+                <p>
+                    Aprimorar a cada dia a qualidade dos serviços prestados, buscando a excelência no atendimento ao 
+                    nosso público e na geração e captação de recursos, através de uma gestão inovadora, organizada, transparente, eficiente e sustentável. 
+                </p>
+            </div>
+
+            <div>
+                <h2>Valores</h2>
+                <p>
+                    I   – A ética e transparência nas ações; <br>
+                    II  – O compromisso com a qualidade dos serviços prestados; <br>
+                    III – A valorização das competências pessoais;<br>
+                    IV  –  A responsabilidade econômica, social e ambiental.
+                </p>
+            </div>
+        </div>
+
     </section>
 
     <!-- SEÇÃO EQUIPE -->
@@ -137,7 +162,8 @@
 
                 <div class="card-equipe">
                     <p>Auxiliar Administrativo</p>
-                    <p>Marcela Cristina Lopes Claes</p>
+                    <!--<p>Marcela Cristina Lopes Claes</p>-->
+                    <p>Daiane Rodrigues Correa</p>
                 </div>
 
                 <div class="card-equipe">
@@ -146,15 +172,17 @@
                 </div>
 
                 <div class="card-equipe">
-                    <p>Monitora</p>
-                    <p>Silmara Cristina Trevsiso</p>
+                   <!--<p>Monitora</p>
+                    <p>Silmara Cristina Trevsiso</p>-->
+                    <p>Cozinheira</p>
+                    <p>Patricia de Almeida</p>
                 </div>
-
+                <!--
                 <div class="card-equipe">
                     <p>Equipe de Apoio</p>
                     <p>Daiane Rodrigues Corrêa</p>
                 </div>
-
+                -->
                 <div class="card-equipe">
                     <p>Equipe de Apoio</p>
                     <p>Josiane Lima da Silva</p>
@@ -163,6 +191,21 @@
                 <div class="card-equipe">
                     <p>Equipe de Apoio</p>
                     <p>Marilda Aparecida Rodrigues</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Equipe de Apoio</p>
+                    <p>Joelma de Souza Siqueira</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Educadora Social</p>
+                    <p>Evelyn Maria dos Santos Siqueira</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Educadora Social</p>
+                    <p>Josiane Lima da Silva</p>
                 </div>
             </div>
 
@@ -179,23 +222,27 @@
                 </div>
 
                 <div class="card-equipe">
-                    <p>Tesoureiro</p>
-                    <p>Dalzija Cristina Bassetto</p>
+                    <p>1º Tesoureiro</p>
+                    <!--<p>Dalzija Cristina Bassetto</p>-->
+                    <p>Ana Paula Rolim Cosenza Gonçalves</p>
                 </div>
 
                 <div class="card-equipe">
-                    <p>Tesoureiro</p>
-                    <p>Marcelina Quessada Gimenez</p>
+                    <p>2º Tesoureiro</p>
+                    <!--<p>Marcelina Quessada Gimenez</p>-->
+                    <p>Fernando Sarmento de Souza</p>
                 </div>
 
                 <div class="card-equipe">
-                    <p>Secretário</p>
-                    <p>Silmara Cristiane Basseto</p>
+                    <p>1º Secretário</p>
+                    <!--<p>Silmara Cristiane Basseto</p>-->
+                    <p>Rosemary Haberland </p>
                 </div>
 
                 <div class="card-equipe">
-                    <p>Secretário</p>
-                    <p>Benedito Matheus Bassetto</p>
+                    <p>2º Secretário</p>
+                    <!--<p>Benedito Matheus Bassetto</p>-->
+                    <p>Maria Helena Zanutto Bassetto Terçoni</p>
                 </div>
 
                 <div class="card-equipe">
