--- a/pages/quem_somos.html
+++ b/pages/quem_somos.html
@@ -100,33 +100,11 @@
                 </p>
             </div>
 
-            <img 
+            <!-- em 27/02/2024 Foi requisitada a remoção da imagem de Missão -->
+            <!-- <img 
                 src="../assets/missao.svg"
                 alt="Foto crianças com banner do Núcleo de Atendimento Social 'Angela Martin Bassettto'">
-        </div>
-
-        <div>
-            <img src="../assets/trabalho.svg" alt="Foto crianças brincando de cabo de guerra">
-
-            <div>
-                <h2>Trabalho</h2>
-                <p>
-                    O trabalho é realizado em quatro grupos: dois grupos, para atender a faixa etária de 06 a 8 anos e
-                    dois grupos, para atender a faixa etária de 9 a 12 anos, através de Oficinas de Artes Manuais,
-                    Grupos Temáticos, Atividades Recreativas Direcionadas, Informática e Atividades de Esporte e Lazer.
-                </p>
-            </div>
-        </div>
-
-        <div>
-            <div>
-                <h2>Visão</h2>
-                <p>
-                    Aprimorar a cada dia a qualidade dos serviços prestados, buscando a excelência no atendimento ao 
-                    nosso público e na geração e captação de recursos, através de uma gestão inovadora, organizada, transparente, eficiente e sustentável. 
-                </p>
-            </div>
-
+            -->
             <div>
                 <h2>Valores</h2>
                 <p>
@@ -134,6 +112,26 @@
                     II  – O compromisso com a qualidade dos serviços prestados; <br>
                     III – A valorização das competências pessoais;<br>
                     IV  –  A responsabilidade econômica, social e ambiental.
+                </p>
+            </div>
+        </div>
+
+        <div>
+            <img src="../assets/trabalho.svg" alt="Foto crianças brincando de cabo de guerra">
+            <!-- em 27/02/2024 Foi requisitada a remoção da seção TRABALHO -->
+            <!--<div>
+                <h2>Trabalho</h2>
+                <p>
+                    O trabalho é realizado em quatro grupos: dois grupos, para atender a faixa etária de 06 a 8 anos e
+                    dois grupos, para atender a faixa etária de 9 a 12 anos, através de Oficinas de Artes Manuais,
+                    Grupos Temáticos, Atividades Recreativas Direcionadas, Informática e Atividades de Esporte e Lazer.
+                </p>
+            </div>-->
+            <div>
+                <h2>Visão</h2>
+                <p>
+                    Aprimorar a cada dia a qualidade dos serviços prestados, buscando a excelência no atendimento ao 
+                    nosso público e na geração e captação de recursos, através de uma gestão inovadora, organizada, transparente, eficiente e sustentável. 
                 </p>
             </div>
         </div>
