--- a/pages/quem_somos.html
+++ b/pages/quem_somos.html
@@ -165,11 +165,6 @@
                 </div>
 
                 <div class="card-equipe">
-                    <p>Monitora</p>
-                    <p>Evelyn Maria dos Santos Siqueira</p>
-                </div>
-
-                <div class="card-equipe">
                    <!--<p>Monitora</p>
                     <p>Silmara Cristina Trevsiso</p>-->
                     <p>Cozinheira</p>
@@ -204,6 +199,11 @@
                 <div class="card-equipe">
                     <p>Educadora Social</p>
                     <p>Josiane Lima da Silva</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Educadora Social</p>
+                    <p>Evelyn Maria dos Santos Siqueira</p>
                 </div>
             </div>
 
