att 2024 | add de colaboradoras

--- a/pages/quem_somos.html
+++ b/pages/quem_somos.html
@@ -170,6 +170,13 @@
                     <p>Cozinheira</p>
                     <p>Patricia de Almeida</p>
                 </div>
+
+                <div class="card-equipe">
+                    <!--<p>Monitora</p>
+                     <p>Silmara Cristina Trevsiso</p>-->
+                     <p>Cozinheira</p>
+                     <p>Telma Adriana Vicensotti </p>
+                 </div>
                 <!--
                 <div class="card-equipe">
                     <p>Equipe de Apoio</p>
@@ -203,7 +210,7 @@
 
                 <div class="card-equipe">
                     <p>Educadora Social</p>
-                    <p>Evelyn Maria dos Santos Siqueira</p>
+                    <p>Suellen Beatriz Pires Batista</p>
                 </div>
             </div>
 
