--- a/index.html
+++ b/index.html
@@ -211,10 +211,15 @@
                 Auto Posto Maion Ltda
             </div>
 
+            <img src="assets/parceiros/prata couro.jpg" alt="Prata Couro, Pratania - SP" height="120">
+
+            <img src="./assets/parceiros/Beets.png" alt="Beets Jr">
+
+            <!-- Att 2024 | remoção de  Fazenda Condórde
             <div class="card-parceiro">
                 Fazenda Condórde - Agropecuária Monte Alegrense LTDA
             </div>
-
+            -->
         </div>
 
 
