att 2024 | att no texto do projeto de colonia de ferias

--- a/index.html
+++ b/index.html
@@ -143,6 +143,20 @@
             <div>
                 <h3>Colônia de Férias</h3>
                 <p>
+                    Nos meses de janeiro e julho realizamos atividades em grupo com todas as crianças e adolescentes inseridos no Núcleo, 
+                    em forma de “Colônia de Férias”, com objetivo de promover a interação e proporcionar um local seguro e agradável 
+                    para a permanência dos participantes durante o período de férias escolares, esquematizadas atividades diferenciadas. 
+                    Oportunizamos neste período, boa alimentação, prática de atividades lúdicas, de lazer, de recreação e cultural, 
+                    como forma de ocupação sadia do tempo livre, visando o desenvolvimento saudável do corpo e da mente e propiciando 
+                    o desenvolvimento da personalidade dos participantes.
+                </p>
+                <a href="./pages/como_ajudar.html">
+                    <button class="botao-apoie-colonia">
+                        APOIE
+                    </button>
+                </a>
+                 <!-- Texto antigo | att em 2024 
+                <p>
                     O Núcleo de Atendimento Social "Ângela Martin Bassetto"
                     realizou a "Colônia de Férias" durante o mês de janeiro.
                     A colônia ocorreu no período da tarde e foi destinada a todas
@@ -152,11 +166,7 @@
                     que as crianças pudessem aproveitar o período de férias
                     escolares em um ambiente seguro e agradável.
                 </p>
-                <a href="./pages/como_ajudar.html">
-                    <button class="botao-apoie-colonia">
-                        APOIE
-                    </button>
-                </a>
+                -->
             </div>
 
         </div>
