--- a/index.html
+++ b/index.html
@@ -221,9 +221,13 @@
                 Auto Posto Maion Ltda
             </div>
 
-            <img src="assets/parceiros/prata couro.jpg" alt="Prata Couro, Pratania - SP" height="120">
+            <img src="assets/parceiros/prata couro.jpg" alt="Prata Couro, Pratania - SP" height="186">
 
-            <img src="./assets/parceiros/Beets.png" alt="Beets Jr">
+            <img src="./assets/parceiros/Beets.png" alt="Beets Jr" height="96">
+
+            <img src="./assets/parceiros/logo-turma-do-bem.png" alt="Turma do Bem">
+
+            <img src="./assets/parceiros/instituto-credicitrus.png" alt="Instituto Credicitrus">
 
             <!-- Att 2024 | remoção de  Fazenda Condórde
             <div class="card-parceiro">
