--- a/index.html
+++ b/index.html
@@ -221,13 +221,19 @@
                 Auto Posto Maion Ltda
             </div>
 
-            <img src="assets/parceiros/prata couro.jpg" alt="Prata Couro, Pratania - SP" height="186">
+            <img src="assets/parceiros/prata couro.jpg" alt="Prata Couro, Pratania - SP" height="200">
 
-            <img src="./assets/parceiros/Beets.png" alt="Beets Jr" height="96">
+            <img src="./assets/parceiros/Beets.png" alt="Beets Jr" height="80">
 
             <img src="./assets/parceiros/logo-turma-do-bem.png" alt="Turma do Bem">
 
             <img src="./assets/parceiros/instituto-credicitrus.png" alt="Instituto Credicitrus">
+
+            <img src="./assets/parceiros/prefeitura-pratania.png" alt="Prefeitura Municipal de Pratânia" height="200">
+
+            <img src="./assets/parceiros/Desenvolvimento_Social_SP.jpg" alt="Secretaria de Estado de Desenvolvimento Social do Estado de São Paulo">
+
+            <img src="./assets/parceiros/logo-Condeca.jpg" alt="Conselho Estadual dos Direitos da Criança e do Adolescente" height="240">
 
             <!-- Att 2024 | remoção de  Fazenda Condórde
             <div class="card-parceiro">
